fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ body {
     font-style: normal;
 }
 
+footer {
+    position: sticky;
+    bottom: 0
+}
+
+p {
+    font-size: 20px
+}
+
 h2 {
     font-size: 30px;
     text-align: center;
